# yolo-k8s-api

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-test.yml  deploy-dev.yml  deploy-prod.yml
app/: __init__.py  config.py  dependencies.py  main.py  middleware.py  models.py  requirements.txt  schemas.py
app/routes/: __init__.py  health.py  inference.py  metadata.py  traffic.py
app/utils/: caching.py  image.py  monitoring.py  video.py
app/utils/export/: benchmark.py  export_onnx.py  export_tensorrt.py  test_gpu.py
docker/: .dockerignore  app.Dockerfile  converter.Dockerfile  docker-compose.yml  triton.Dockerfile
docs/: performance.md
k8s/base/: api-configmap.yaml  api-deployment.yaml  api-hpa.yaml  api-secret.yaml  ingress.yaml  kustomization.yaml  storage-pvc.yaml  triton-deployment.yaml  triton-service.yaml
k8s/overlays/dev/: kustomization.yaml  patch-api.yaml
k8s/overlays/prod/: kustomization.yaml  patch-api.yaml
monitoring/grafana/: grafana.yaml
monitoring/grafana/dashboards/: kubernetes.json  model-performance.json
monitoring/loki/: loki.yaml
monitoring/prometheus/: prometheus.yaml  prometheus.yml
scripts/: benchmark.py  convert_model.py  convert_to_onnx.py  setup_environment.sh
tests/integration/: test_flow.py
tests/performance/: load_test.py
triton/model_repository/yolo/: config.pbtxt
triton/server_config/: config.pbtxt
