[tool.poetry]
name = "yolo-k8s-api"
version = "0.1.0"
description = "YOLO Object Detection API on Kubernetes"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
uvicorn = "^0.20.0"
ultralytics = "^8.0.0"
python-multipart = "^0.0.5"
pydantic-settings = "^2.0.0"
opencv-python-headless = "^4.7.0"
numpy = "^1.23.0"
tritonclient = {extras = ["grpc"], version = "^2.30.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
